# weather-data-etl-and-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/v1/: router.py  temprature.py  weather.py
etl/: api_client.py  celery.py  database.py  main.py  model.py  pipeline.py  schema.py  util.py
tests/: conftest.py  test_health.py
