[project]
name = "weather-app"
version = "0.1.0"
description = "Weather app that contains ETL to scrap data from DWD Server and FastAPI for exposing them"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "python-dotenv",
    "structlog",
    "sqlalchemy",
    "psycopg2",
    "app",
    "etl"
]

[tool.uv.workspace]
members = ["packages/etl", "packages/app"]

[tool.ruff]
line-length = 125

[dependency-groups]
dev = [
    "ruff",
    "isort"
]
